[gd_scene load_steps=2 format=3 uid="uid://bjipf6rnsisdi"]

[ext_resource type="Script" uid="uid://nievtktptraw" path="res://assets/ui/DialogueUI.gd" id="1_dialogue_script"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_dialogue_script")

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "角色名"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="DialogueLabel" type="RichTextLabel" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "对话内容显示在这里..."
fit_content = true

[node name="ContinueButton" type="Button" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "继续 (回车/空格)"
